完成C的练习

--- a/C语言练习题库（NU）/C语言练习题库（NU）.vcxproj.filters
+++ b/C语言练习题库（NU）/C语言练习题库（NU）.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="TestFunction.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Function33.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
