--- a/C语言练习题库（NU）/C语言练习题库（NU）.vcxproj
+++ b/C语言练习题库（NU）/C语言练习题库（NU）.vcxproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Function.h" />
+    <ClInclude Include="Function33.h" />
     <ClInclude Include="TestFunction.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
